# fast-server

./: .cursorrules  .gitignore  pyproject.toml
documentation/: fast_server_package_directory_structure.md
source_code/fast_server/: __init__.py
source_code/fast_server/v1/: __init__.py
source_code/fast_server/v1/api_operation_framework/: http_methods.py
source_code/fast_server/v1/api_operation_framework/api_operation_dependencies/: log_request_data.py
source_code/fast_server/v1/api_operation_framework/operations/: api_operation.py  initialize_and_register_api_operations.py
source_code/fast_server/v1/services/server/: server_configuration.py  server_lifecycle.py  server_runner.py
source_code/fast_server/v1/test/api_operations/: get_health.py  save_idea.py
source_code/fast_server/v1/test/data_model_handlers/: idea_data_model_handler.py
source_code/fast_server/v1/test/data_models/: idea_data_model.py
source_code/fast_server/v1/utilities/: __init__.py  api_operations_path.py  get_user_id_with_authentication_header.py  logging_presentation.py  logging_related.py  port_related.py
tests/: test_importing_this_package.py
