[tool.poetry]
name = "fast-server"
version = "0.1.0"
description = ""
authors = ["Blake Larson <wokebloke@icloud.com>"]
readme = "README.md"
packages = [
    { include = "fast_server", from = "source_code" }
]

[tool.poetry.dependencies]
foundation = { path = "../Foundation", develop = true }
dev_pytopia = { path = "../Dev Pytopia", develop = true }
database_dimension = { path = "../Database Dimension", develop = true }
python = ">=3.12"
dnspython = ">=2.7.0"
pymongo = ">=4.9.2"
motor = ">=3.6.1"
uvicorn = ">=0.34.0"
rich = ">=13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[tool.pytest.ini_options]
addopts = "-v -s"
pythonpath = ["source_code"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "quicktest: mark a test as a quick test",
]

[tool.ruff]
line-length = 115
src = ["source_code"]

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = true
relative-imports-order = "closest-to-furthest"
known-first-party = [
    "foundation"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
